--- a/src/components/hero/HeroBanner.css
+++ b/src/components/hero/HeroBanner.css
@@ -6,7 +6,7 @@ video {
     top: 0;
     z-index: -1;
 }
-.hero-container {
+.hero--container {
     background: url('../../images/hero-bg.jpg') center center/cover no-repeat;
     width: 100%;
     height: 350px;
@@ -17,7 +17,7 @@ video {
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
     object-fit: contain;
 }
-.hero-btn--questions {
+.hero--btn--questions {
     color: #fff;
     text-align: center;
     padding-bottom: 10px;
