--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,3 +1,27 @@
-nav {
-    height: 50px;
+.navbar--container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    height: 60px;
+    align-items: center;
+}
+.navbar--logo img {
+    max-width: 125px;
+}
+.nav--link-wrap {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.nav--item {
+    float: left;
+    display: inline;
+}
+.nav--item a {
+    display: block;
+    padding: 30px;
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
 }
