--- a/src/components/hero/AuthPanel.css
+++ b/src/components/hero/AuthPanel.css
@@ -1,6 +1,10 @@
 .billboard {
     background: #515151;
     padding: 35px 10px;
+    margin-top: 76px;
+}
+.sticky .billboard {
+    margin-top: 60px;
 }
 .billboard .crosslink, .billboard .crosslink a {
     color: #fff;
