--- a/src/components/hero/HeroBanner.css
+++ b/src/components/hero/HeroBanner.css
@@ -9,10 +9,10 @@ video {
 .hero--container {
     background: url('../../images/hero-bg.jpg') center center/cover no-repeat;
     width: 100%;
-    height: 350px;
+    height: 450px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    padding-top: 240px;
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
     object-fit: contain;
