--- a/src/components/howitworks/HowItWorks.css
+++ b/src/components/howitworks/HowItWorks.css
@@ -1,6 +1,8 @@
 .how-it-works {
+    background-color: #fff;
     text-align: center;
     padding: 50px 0;
+    position: relative;
 }
 .how-it-works img {
     max-width: 127px;
