--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,3 +1,30 @@
+.navbar {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 8px 0;
+    transition: 0.8s;
+    background-color: rgb(255 255 255 / 100%);
+    box-shadow: 2px 0 10px rgb(41 44 61 / 34%);
+    z-index: 10;
+}
+.navbar.sticky {
+    background-color: rgb(255 255 255 / 70%);
+}
+.sticky .nav--item a {
+    padding: 5px 30px;
+    font-size: 16px;
+}
+.sticky .navbar--container {
+    height: auto;
+}
+.sticky .navbar--logo img {
+    max-width: 80px;
+}
+.sticky .hero--container {
+    margin-top: 60px;
+}
 .navbar--container {
     display: flex;
     width: 100%;
@@ -7,6 +34,8 @@
 }
 .navbar--logo img {
     max-width: 125px;
+    margin-left: 20px;
+    transition: 0.8s;
 }
 .nav--menu {
     list-style-type: none;
@@ -24,6 +53,7 @@
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
+    transition: 0.8s;
 }
 .menu--icon {
     display: none;
