--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -12,19 +12,6 @@
 .navbar.sticky {
     background-color: rgb(255 255 255 / 70%);
 }
-.sticky .nav--item a {
-    padding: 5px 30px;
-    font-size: 16px;
-}
-.sticky .navbar--container {
-    height: auto;
-}
-.sticky .navbar--logo img {
-    max-width: 80px;
-}
-.sticky .hero--container {
-    margin-top: 60px;
-}
 .navbar--container {
     display: flex;
     width: 100%;
@@ -57,6 +44,19 @@
 }
 .menu--icon {
     display: none;
+}
+.sticky .nav--item a {
+    padding: 5px 30px;
+    font-size: 16px;
+}
+.sticky .navbar--container {
+    height: auto;
+}
+.sticky .navbar--logo img {
+    max-width: 80px;
+}
+.sticky .hero--container {
+    margin-top: 60px;
 }
 @media (max-width: 767.98px){
 .menu--icon {
@@ -101,4 +101,11 @@
       transition: all 0.5s ease;
       z-index: 1;
     }
+.sticky .nav--menu {
+    top: 53px;
+}
+.sticky .nav--item a {
+    padding: 20px;
+    font-size: 20px;
+}
 }
