--- a/src/components/faqs/Faqs.css
+++ b/src/components/faqs/Faqs.css
@@ -1,16 +1,54 @@
 .faqs {
     background: #515151;
     padding: 50px 0;
+    min-height: 600px;
 }
 .faqs h2 {
     color: #fff;
     text-align: center;
     margin-bottom: 40px;
 }
+.faqs--container {
+    position: relative;
+}
+.faqs--question-wrap {
+    display: flex;
+    justify-content: space-between;
+}
 .faqs--qa {
-    max-width: 750px;
-    margin: 0 auto;
+    width: 48%;
     border-top: dotted 1px #efefef;
+}
+.faqs--image {
+    width: 48%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+}
+.faqs--image img {
+    position: relative;
+    z-index: 0;
+    /* right: -1000px; */
+    /* transition: 1s; */
+}
+.faqs--image .active-slide {
+    z-index: 99;
+    /* right: 0; */
+    /* transition: 1s; */
+    animation: fadeIn ease 1.3s;
+    -webkit-animation: fadeIn ease 1.3s;
+    -moz-animation: fadeIn ease 1.3s;
+    -o-animation: fadeIn ease 1.3s;
+    -ms-animation: fadeIn ease 1.3s;
+}
+@keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
 }
 .faqs--qa p, .faqs--qa .fas {
     color: #fff;
@@ -22,23 +60,30 @@
 }
 .faqs--question {
     display: flex;
-    position: relative;
-    padding: 12px;
+    padding: 20px 12px;
     justify-content: space-between;
     cursor: pointer;
-    transition: all 2s ease-out;
+    transition: 1s;
 }
 .faqs--question p {
+    margin-top: 0;
     margin-bottom: 0;
     margin-right: 20px;
 }
 .faqs--answer {
     display: none;
-    /*transition: all 0.5s ease-in-out;*/
+    transition: 1s;
 }
 .faqs--answer.open  {
     display: block;
-    padding: 12px;
+    padding: 0 12px 12px;
 }
-
+@media (max-width: 767.98px) {
+.faqs--image{
+    display: none;
+}
+.faqs--qa {
+    width: 100%;
+}
+}
 
