--- a/src/components/hero/HeroBanner.css
+++ b/src/components/hero/HeroBanner.css
@@ -7,14 +7,15 @@ video {
     z-index: -1;
 }
 .hero--container {
-    background: url('../../images/hero-bg.jpg') center center/cover no-repeat;
+    background: url('../../images/hero-bg-2.jpg') center center/cover no-repeat;
     width: 100%;
     height: 450px;
     display: flex;
     flex-direction: column;
-    padding-top: 240px;
-    align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
+    padding-top: 230px;
+    padding-right: 12%;
+    align-items: flex-end;
+    /*box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);*/
     object-fit: contain;
 }
 .hero--btn--questions {
