--- a/src/components/howitworks/HowItWorks.css
+++ b/src/components/howitworks/HowItWorks.css
@@ -1,7 +1,7 @@
 .how-it-works {
     background-color: #fff;
     text-align: center;
-    padding: 50px 0;
+    padding: 25px 0 40px;
     position: relative;
 }
 .how-it-works img {
